--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "astro-flowbite",
+  "name": "airshb",
+  "description": "Australian Independent Retirees Sydney Hills Branch website",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
@@ -15,7 +16,7 @@
     "@astrojs/rss": "^4.0.5",
     "@astrojs/sitemap": "^3.1.1",
     "@astrojs/tailwind": "^5.1.0",
-    "astro": "^4.4.12",
+    "astro": "^4.4.15",
     "astro-icon": "^1.1.0",
     "flowbite": "^2.3.0",
     "tailwindcss": "^3.4.1"
@@ -23,18 +24,19 @@
   "devDependencies": {
     "@astrojs/check": "^0.5.6",
     "@iconify-json/logos": "^1.1.42",
-    "@types/node": "^20.11.24",
+    "@types/node": "^20.11.25",
     "@typescript-eslint/parser": "^7.1.1",
     "eslint": "^8.57.0",
     "eslint-plugin-astro": "^0.31.4",
     "eslint-plugin-jsx-a11y": "^6.8.0",
-    "eslint-plugin-markdown": "^3.0.1",
+    "eslint-plugin-markdown": "^4.0.1",
     "eslint-plugin-mdx": "^3.1.5",
     "flowbite-typography": "^1.0.3",
     "prettier": "^3.2.5",
     "prettier-plugin-astro": "^0.13.0",
-    "prettier-plugin-tailwindcss": "^0.5.11",
-    "typescript": "^5.3.3",
+    "prettier-plugin-tailwindcss": "^0.5.12",
+    "sharp": "^0.33.2",
+    "typescript": "^5.4.2",
     "vite": "^5.1.5"
   },
   "packageManager": "pnpm@8.15.4+sha1.c85a4305534f76d461407b59277b954bac97b5c4"
