--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lint:eslint": "eslint --fix \"src/**/*.{js,ts,jsx,tsx,astro}\""
   },
   "dependencies": {
+    "@astrojs/mdx": "^2.1.1",
     "@astrojs/rss": "^4.0.5",
     "@astrojs/sitemap": "^3.1.1",
     "@astrojs/tailwind": "^5.1.0",
@@ -32,6 +33,7 @@
     "eslint-plugin-markdown": "^4.0.1",
     "eslint-plugin-mdx": "^3.1.5",
     "flowbite-typography": "^1.0.3",
+    "netlify-cli": "^17.19.0",
     "prettier": "^3.2.5",
     "prettier-plugin-astro": "^0.13.0",
     "prettier-plugin-tailwindcss": "^0.5.12",
