--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -3,8 +3,8 @@ backend:
   branch: main # Branch to update (optional; defaults to master)
 
 # This line should *not* be indented
-media_folder: "public/images" # Media files will be stored in the repo under images/uploads
-public_folder: "/images" # The src attribute for uploaded media will begin with /images/uploads
+media_folder: "src/assets/images" # Media files will be stored in the repo under images/uploads
+public_folder: "../../assets/images" # The src attribute for uploaded media will begin with /images/uploads
 
 collections:
   - name: "meeting" # Used in routes, e.g., /admin/collections/blog
