--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -13,7 +13,10 @@ collections:
     create: true # Allow users to create new documents in this collection
     slug: "{{year}}-{{month}}-{{day}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
+      - { label: "Draft", name: "draft", widget: "boolean", required: false }
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Publish Date", name: "pubDate", widget: "datetime" }
       - { label: "Description", name: "description", widget: "string" }
+      - { label: "Image", name: "image", widget: "image", allow_multiple: false, equired: false }
+      - { label: "Additional Images", name: "images", widget: "list", field: "image", required: false }
       - { label: "Body", name: "body", widget: "markdown" }
