--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -9,7 +9,7 @@ public_folder: "../../assets/images" # The src attribute for uploaded media will
 collections:
   - name: "meeting" # Used in routes, e.g., /admin/collections/blog
     label: "Meetings" # Used in the UI
-    folder: "src/content/meetings" # The path to the folder where the documents are stored
+    folder: "src/content/meeting" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     slug: "{{year}}-{{month}}-{{day}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
